# cgui

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: example1.cpp
examples/example1/: CMakeLists.txt  main.cpp
include/cgui/: box.h  canvas.h  cgui.h  color.h  geometry.h  sized.h  text.h
include/cgui/box/: background.h  box.h  sized.h  text.h
include/cgui/graphics/: canvas.h  color.h
src/: CMakeLists.txt  api.c  box_background.cpp  cgui.cpp  color.cpp  color_utils.cpp  color_utils.h  geometry.cpp  geometry_utils.cpp  geometry_utils.h  sized.cpp  skia_canvas.cpp  skia_canvas.h  text.cpp
src/box/: CMakeLists.txt  background.cpp  sized.cpp  text.cpp
src/geometry/: CMakeLists.txt  geometry.cpp
src/graphics/: CMakeLists.txt  canvas.cpp  color.cpp
src/internal/: CMakeLists.txt  colorutils.cpp
